examples/mood/tests/parse_errors/forgot_numeric_type_hint.mood
pub fn test(): i32 {
  42
}